# Ares

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py  models.py
backend/agents/: compiler.py  critic.py  graph.py  prompts.py  worker.py
backend/api/: replay.py  runs.py  stream.py  traces.py
backend/store/: __init__.py  database.py  events.py  memory.py  nodes_repo.py  runs_repo.py  schema.sql  scores_repo.py  spans_repo.py
backend/tests/: conftest.py  test_compiler.py  test_phase2.py  test_tools.py  test_worker.py
backend/tests/evals/: __init__.py  golden_set.py  test_evals.py
backend/tools/: code_exec.py  file_ops.py  http_get.py  registry.py  web_search.py
backend/tracing/: __init__.py  exporter.py  middleware.py  setup.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: CompanyCard.tsx  DagCanvas.tsx  NewRunForm.tsx  NodeCard.tsx  ReportPanel.tsx  RunHeader.tsx  RunList.tsx  TraceSidebar.tsx
frontend/hooks/: useRunData.ts  useRunStream.ts
frontend/lib/: api.ts  types.ts
frontend/store/: runStore.ts
output/: .gitkeep
