[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ares"
version = "0.1.0"
description = "Local-first observable multi-agent execution platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Pydantic
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pydantic-ai>=0.0.13",

    # Database
    "aiosqlite>=0.20.0",

    # Vector store
    "chromadb>=0.5.0",

    # OpenTelemetry
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-api>=1.27.0",

    # HTTP client
    "httpx>=0.27.0",

    # Web search (no API key required)
    "ddgs>=0.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # for TestClient
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "integration: marks tests as integration tests requiring Ollama (deselect with '-m not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
